{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 133,
  "lineage": "c8bb2c47-f0b2-1acf-5218-3e048d08edcd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_port_80_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:088083054867:listener/app/bootcamp-prod-web-alb/c65e75c84163a7b2/935981d9c2e33791",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:088083054867:listener/app/bootcamp-prod-web-alb/c65e75c84163a7b2/935981d9c2e33791",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:088083054867:loadbalancer/app/bootcamp-prod-web-alb/c65e75c84163a7b2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.bastion-public-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:network-acl/acl-0ec614e8ed60af11a",
            "default_network_acl_id": "acl-0ec614e8ed60af11a",
            "egress": [],
            "id": "acl-0ec614e8ed60af11a",
            "ingress": [],
            "owner_id": "088083054867",
            "subnet_ids": [
              "subnet-020c00adadd829bf4",
              "subnet-046e154c472e73873",
              "subnet-053de7dcaa54ab2a3",
              "subnet-05442551439fa5a97",
              "subnet-0ae20f9f3abfa4591",
              "subnet-0c0f30802de1f0c04"
            ],
            "tags": {
              "Name": "default_nacl_do_not_use"
            },
            "tags_all": {
              "Name": "default_nacl_do_not_use"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:route-table/rtb-04d61a5c89b4d94a9",
            "default_route_table_id": "rtb-04d61a5c89b4d94a9",
            "id": "rtb-04d61a5c89b4d94a9",
            "owner_id": "088083054867",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default_route_table_do_not_use"
            },
            "tags_all": {
              "Name": "default_route_table_do_not_use"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:security-group/sg-0380b9b70c7ee0e70",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0380b9b70c7ee0e70",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "088083054867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default_security_group_do_not_use"
            },
            "tags_all": {
              "Name": "default_security_group_do_not_use"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ada2680c41649c1",
            "domain": "vpc",
            "id": "eipalloc-07ada2680c41649c1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-173-232.compute-1.amazonaws.com",
            "public_ip": "100.29.173.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip"
            },
            "tags_all": {
              "Name": "nat_gateway_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:088083054867:instance/i-09805386dec60ac71",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-09805386dec60ac71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "skillsync_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1f5db8c8a188546",
            "private_dns": "ip-10-0-3-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.215",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:088083054867:key/d41a55a1-c8ed-4c7d-9d46-0c15eb49a8d4",
                "throughput": 125,
                "volume_id": "vol-09fd38b538356c190",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020c00adadd829bf4",
            "tags": {
              "Name": "app-server"
            },
            "tags_all": {
              "Name": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b51c4687693d7829"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.app-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:internet-gateway/igw-0429c3527314f40b5",
            "id": "igw-0429c3527314f40b5",
            "owner_id": "088083054867",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:088083054867:loadbalancer/app/bootcamp-prod-web-alb/c65e75c84163a7b2",
            "arn_suffix": "app/bootcamp-prod-web-alb/c65e75c84163a7b2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bootcamp-prod-web-alb-2146910925.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:088083054867:loadbalancer/app/bootcamp-prod-web-alb/c65e75c84163a7b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bootcamp-prod-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02ea383caa255c74f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ae20f9f3abfa4591"
              },
              {
                "subnet_id": "subnet-0c0f30802de1f0c04"
              }
            ],
            "subnets": [
              "subnet-0ae20f9f3abfa4591",
              "subnet-0c0f30802de1f0c04"
            ],
            "vpc_id": "vpc-05d14b7173e1647ad",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_subnet.bastion-public-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:088083054867:targetgroup/bootcamp-prod-app-tg/1b6c7fc7a69a3fc1",
            "arn_suffix": "targetgroup/bootcamp-prod-app-tg/1b6c7fc7a69a3fc1",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:088083054867:targetgroup/bootcamp-prod-app-tg/1b6c7fc7a69a3fc1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bootcamp-prod-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_alb_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:088083054867:targetgroup/bootcamp-prod-app-tg/1b6c7fc7a69a3fc1-2024081313215620660000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:088083054867:targetgroup/bootcamp-prod-app-tg/1b6c7fc7a69a3fc1",
            "target_id": "i-09805386dec60ac71"
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_instance.app-server",
            "aws_lb_target_group.app_target_group",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.app-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ada2680c41649c1",
            "association_id": "eipassoc-0a1f10dd96c08b84a",
            "connectivity_type": "public",
            "id": "nat-0d581de8e1bf3f7e3",
            "network_interface_id": "eni-043a99cdea4496ad8",
            "private_ip": "10.0.0.218",
            "public_ip": "100.29.173.232",
            "subnet_id": "subnet-0c0f30802de1f0c04",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:network-acl/acl-05bc77ec8caccacbb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05bc77ec8caccacbb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "088083054867",
            "subnet_ids": [
              "subnet-020c00adadd829bf4",
              "subnet-05442551439fa5a97"
            ],
            "tags": {
              "Name": "bootcamp-app-private-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-nacl"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app-private-a",
            "aws_subnet.app-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bastion-public-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:network-acl/acl-074546c69519c3d60",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-074546c69519c3d60",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "088083054867",
            "subnet_ids": [
              "subnet-0ae20f9f3abfa4591"
            ],
            "tags": {
              "Name": "bootcamp-bastion-public-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-nacl"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.bastion-public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:network-acl/acl-04c1f7d87ecd438f8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04c1f7d87ecd438f8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "088083054867",
            "subnet_ids": [
              "subnet-0c0f30802de1f0c04"
            ],
            "tags": {
              "Name": "bootcamp-public-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-public-nacl"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:network-acl/acl-0e066639ad7393732",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e066639ad7393732",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "088083054867",
            "subnet_ids": [
              "subnet-046e154c472e73873",
              "subnet-053de7dcaa54ab2a3"
            ],
            "tags": {
              "Name": "bootcamp-web-private-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-nacl"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.web-private-a",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:route-table/rtb-00c8af18db88462c5",
            "id": "rtb-00c8af18db88462c5",
            "owner_id": "088083054867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d581de8e1bf3f7e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-app-private-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:route-table/rtb-0b7a8d979b805ea91",
            "id": "rtb-0b7a8d979b805ea91",
            "owner_id": "088083054867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0429c3527314f40b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-bastion-public-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:route-table/rtb-0b54ec607f7e9e439",
            "id": "rtb-0b54ec607f7e9e439",
            "owner_id": "088083054867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0429c3527314f40b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-public-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:route-table/rtb-0f8c76889d3a83011",
            "id": "rtb-0f8c76889d3a83011",
            "owner_id": "088083054867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d581de8e1bf3f7e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-web-private-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae69ef9d7e94639",
            "route_table_id": "rtb-00c8af18db88462c5",
            "subnet_id": "subnet-020c00adadd829bf4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07583621e8abb28c2",
            "route_table_id": "rtb-00c8af18db88462c5",
            "subnet_id": "subnet-05442551439fa5a97"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-b",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef93581bb244dffc",
            "route_table_id": "rtb-0b7a8d979b805ea91",
            "subnet_id": "subnet-0ae20f9f3abfa4591"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.bastion-public-route-table",
            "aws_subnet.bastion-public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ff7fcac5f669028",
            "route_table_id": "rtb-0b54ec607f7e9e439",
            "subnet_id": "subnet-0c0f30802de1f0c04"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dfbbc464545497a",
            "route_table_id": "rtb-0f8c76889d3a83011",
            "subnet_id": "subnet-046e154c472e73873"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-a",
            "aws_subnet.web-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0675161367c71dc70",
            "route_table_id": "rtb-0f8c76889d3a83011",
            "subnet_id": "subnet-053de7dcaa54ab2a3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-a",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:security-group/sg-0b496675b5f039d52",
            "description": "Allowing Inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b496675b5f039d52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bootcamp-bastion-public-security-group",
            "name_prefix": "",
            "owner_id": "088083054867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-public-security-group"
            },
            "tags_all": {
              "Name": "bastion-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-app-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:security-group/sg-0b51c4687693d7829",
            "description": "Allowing Web and App Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b51c4687693d7829",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ea383caa255c74f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ea383caa255c74f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp-web-app-private-security-group",
            "name_prefix": "",
            "owner_id": "088083054867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp-web-private-security-group"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-elb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:security-group/sg-02ea383caa255c74f",
            "description": "Allowing Web Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ea383caa255c74f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp-web-elb-public-security-group",
            "name_prefix": "",
            "owner_id": "088083054867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp-web-elb-public-security-group"
            },
            "tags_all": {
              "Name": "bootcamp-web-elb-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:subnet/subnet-020c00adadd829bf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c00adadd829bf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088083054867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-app-private-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-subnetA"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:subnet/subnet-05442551439fa5a97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05442551439fa5a97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088083054867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-app-private-subnetB"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-subnetB"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:subnet/subnet-0ae20f9f3abfa4591",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae20f9f3abfa4591",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088083054867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-bastion-public-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-subnetA"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:subnet/subnet-0c0f30802de1f0c04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0f30802de1f0c04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088083054867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-public-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-public-subnetA"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:subnet/subnet-046e154c472e73873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046e154c472e73873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088083054867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-web-private-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-subnetA"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:subnet/subnet-053de7dcaa54ab2a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053de7dcaa54ab2a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088083054867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-web-private-subnetB"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-subnetB"
            },
            "vpc_id": "vpc-05d14b7173e1647ad"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088083054867:vpc/vpc-05d14b7173e1647ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec614e8ed60af11a",
            "default_route_table_id": "rtb-04d61a5c89b4d94a9",
            "default_security_group_id": "sg-0380b9b70c7ee0e70",
            "dhcp_options_id": "dopt-0ca1c096c6734df0e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d14b7173e1647ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d61a5c89b4d94a9",
            "owner_id": "088083054867",
            "tags": {
              "Name": "bootcamp_vpc"
            },
            "tags_all": {
              "Name": "bootcamp_vpc"
            }
          }
        }
      ]
    }
  ]
}